--- a/cikk/main/article.tex
+++ b/cikk/main/article.tex
@@ -7,10 +7,10 @@
 
 \title{SPIE journal papers: sample manuscript showing style and formatting specifications}
 
-\author[a]{First Author}
+\author[a,*]{G\'abor Galg\'oczi}
 \author[a]{Second Author}
 \author[b]{Third Author}
-\author[a,b,*]{Fourth Author}
+\author[a,b]{Fourth Author}
 \affil[a]{University Name, Faculty Group, Department, Street Address, City, Country, Postal Code}
 \affil[b]{Company Name, Street Address, City, Country, Postal Code}
 
@@ -28,7 +28,7 @@ This document shows the required format and appearance of a manuscript prepared 
 \keywords{optics, photonics, light, lasers, journal manuscripts, LaTeX template}
 
 % Include email contact information for corresponding author
-{\noindent \footnotesize\textbf{*}Fourth author name,  \linkable{myemail@university.edu} }
+{\noindent \footnotesize\textbf{*}G\'abor Galg\'oczi,  \linkable{galgoczi.gabor@wigner.mta.hu} }
 
 \begin{spacing}{2}   % use double spacing for rest of manuscript
 
