--- a/cikk/main/article.tex
+++ b/cikk/main/article.tex
@@ -21,11 +21,11 @@
 \maketitle
 
 \begin{abstract}
-This document shows the required format and appearance of a manuscript prepared for SPIE journals. It is prepared using LaTeX2e with the class file \texttt{spieman.cls}. The abstract should consist of a single paragraph containing no more than 200 words. It should be a summary of the paper and not an introduction. Because the abstract may be used in abstracting and indexing databases, it should be self-contained (that is, no numerical references) and substantive in nature, presenting concisely the objectives, methodology used, results obtained, and their significance. A list of up to eight keywords should immediately follow, with the keywords separated by commas and ending with a period. The body of the manuscript should be double-spaced and fully justified.   
+Abstract
 \end{abstract}
 
 % Include a list of up to six keywords after the abstract
-\keywords{optics, photonics, light, lasers, journal manuscripts, LaTeX template}
+\keywords{Geant4, GRB, gamma-rays, satellite, cosmic background}
 
 % Include email contact information for corresponding author
 {\noindent \footnotesize\textbf{*}G\'abor Galg\'oczi,  \linkable{galgoczi.gabor@wigner.mta.hu} }
@@ -34,7 +34,7 @@ This document shows the required format and appearance of a manuscript prepared 
 
 \section{Introduction}
 \label{sect:intro}  % \label{} allows reference to this section
-This document shows the format and appearance of a manuscript prepared for submission to an SPIE journal. Note that this template is only intended to be used as a guideline for author convenience. It is designed for optimum clarity and ease of reading for editors and reviewers, but the template does not reflect the final page layout of a published journal paper. Accepted papers are professionally typeset in XML according to the layout and design of the journal. 
+ 
 
 \section{Results}
 
